[gd_scene load_steps=4 format=3 uid="uid://bxnmbeo2w51s3"]

[ext_resource type="Script" path="res://scenes/MainMenu.gd" id="1_smv14"]
[ext_resource type="Theme" uid="uid://bmm3mvq11y045" path="res://theme.tres" id="2_aajnr"]
[ext_resource type="Script" path="res://addons/GodotPlayGameServices/scripts/sign_in/sign_in_client.gd" id="3_32bum"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_smv14")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="NavBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/NavBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("2_aajnr")
text = "Main Menu"

[node name="SignInButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Sign In"

[node name="AchievementsButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
theme = ExtResource("2_aajnr")
disabled = true
text = "Achievements"

[node name="LeaderboardsButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
theme = ExtResource("2_aajnr")
disabled = true
text = "Leaderboads"

[node name="PlayersButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
theme = ExtResource("2_aajnr")
disabled = true
text = "Players"

[node name="SnapshotsButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
theme = ExtResource("2_aajnr")
disabled = true
text = "Saved Games"

[node name="PlayGamesSignInClient" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_32bum")

[connection signal="user_authenticated" from="PlayGamesSignInClient" to="." method="_on_user_authenticated"]
